k8s/pwa_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pwa-deployment
  labels:
    app.kubernetes.io/name: pwa
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pwa
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pwa
    spec:
      containers:
      - name: pwa
        image: dubov94/keyring-pwa
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
