k8s/server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app.kubernetes.io/name: server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
    spec:
      containers:
      - name: server
        image: dubov94/keyring-server
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
