k8s/grpc_gateway_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-gateway-service
spec:
  selector:
    app.kubernetes.io/name: grpc-gateway
  ports:
    - protocol: TCP
      port: 5002
