k8s/server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app.kubernetes.io/name: server
  ports:
    - protocol: TCP
      port: 5001
